[gd_scene load_steps=36 format=3 uid="uid://4hf7dgvsytss"]

[ext_resource type="Script" uid="uid://i5bufqdi8vt6" path="res://entities/chickens/chicken.gd" id="1_scr0v"]
[ext_resource type="PackedScene" uid="uid://bvj685b08ne5i" path="res://drops/wing.tscn" id="2_5egjd"]
[ext_resource type="Texture2D" uid="uid://db3djmeyrrxuf" path="res://entities/chickens/assets/chicken_sheet.png" id="2_hdls3"]
[ext_resource type="Texture2D" uid="uid://bw8s4nkfelrju" path="res://entities/chickens/assets/feather.png" id="3_ji1vg"]
[ext_resource type="Texture2D" uid="uid://b7kwqf0e5nw3y" path="res://entities/chickens/assets/grass_particle.png" id="3_kpgen"]
[ext_resource type="AudioStream" uid="uid://csuv52b532lgs" path="res://entities/chickens/assets/bok_bok.wav" id="5_kpgen"]
[ext_resource type="Script" uid="uid://c3o1i4wv3scxd" path="res://core/fsm/state_machine.gd" id="6_gfhuf"]
[ext_resource type="Script" uid="uid://bxuu6xyklmgms" path="res://entities/chickens/states/chicken_idle.gd" id="7_cgl0l"]
[ext_resource type="Script" uid="uid://cwlhrwa10vodw" path="res://entities/chickens/states/chicken_roaming.gd" id="8_kpgen"]

[sub_resource type="Curve" id="Curve_kpgen"]
_data = [Vector2(0.5040916, 0.9999999), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_qxmy2"]
curve = SubResource("Curve_kpgen")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cgl0l"]
particle_flag_disable_z = true
angle_min = 1.0728835e-05
angle_max = 720.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 1.0
initial_velocity_max = 10.0
gravity = Vector3(0, 0, 0)
alpha_curve = SubResource("CurveTexture_qxmy2")

[sub_resource type="AtlasTexture" id="AtlasTexture_kpgen"]
atlas = ExtResource("2_hdls3")
region = Rect2(0, 23, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgl0l"]
atlas = ExtResource("2_hdls3")
region = Rect2(0, 56, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxmy2"]
atlas = ExtResource("2_hdls3")
region = Rect2(10, 56, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_d21jh"]
atlas = ExtResource("2_hdls3")
region = Rect2(0, 23, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_aab7k"]
atlas = ExtResource("2_hdls3")
region = Rect2(10, 23, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bflf"]
atlas = ExtResource("2_hdls3")
region = Rect2(0, 45, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7m6h"]
atlas = ExtResource("2_hdls3")
region = Rect2(10, 45, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkwpe"]
atlas = ExtResource("2_hdls3")
region = Rect2(20, 45, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_2081p"]
atlas = ExtResource("2_hdls3")
region = Rect2(0, 12, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyq2y"]
atlas = ExtResource("2_hdls3")
region = Rect2(10, 12, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls7nv"]
atlas = ExtResource("2_hdls3")
region = Rect2(20, 12, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg6h0"]
atlas = ExtResource("2_hdls3")
region = Rect2(0, 34, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i56c"]
atlas = ExtResource("2_hdls3")
region = Rect2(10, 34, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17b7"]
atlas = ExtResource("2_hdls3")
region = Rect2(0, 1, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dd82"]
atlas = ExtResource("2_hdls3")
region = Rect2(10, 1, 10, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_hdls3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpgen")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgl0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxmy2")
}],
"loop": true,
"name": &"idle_left",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d21jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aab7k")
}],
"loop": true,
"name": &"idle_right",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bflf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7m6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkwpe")
}],
"loop": false,
"name": &"sit_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2081p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyq2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls7nv")
}],
"loop": false,
"name": &"sit_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg6h0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i56c")
}],
"loop": true,
"name": &"walk_left",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dd82")
}],
"loop": true,
"name": &"walk_right",
"speed": 12.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kpgen"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(1, 1, 1, 0.5137255)
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxmy2"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.9647059, 0.45882353, 0.47843137, 1)
corner_detail = 6

[sub_resource type="CircleShape2D" id="CircleShape2D_ji1vg"]
radius = 6.5

[sub_resource type="Curve" id="Curve_hdls3"]
_data = [Vector2(0.6506024, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5egjd"]
curve = SubResource("Curve_hdls3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ce5f1"]
particle_flag_disable_z = true
angle_min = 1.0728835e-05
angle_max = 90.000015
direction = Vector3(0, -1, 0)
initial_velocity_min = 40.0
initial_velocity_max = 60.0
gravity = Vector3(0, 98, 0)
alpha_curve = SubResource("CurveTexture_5egjd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kpgen"]
particle_flag_disable_z = true
angle_min = 1.0728835e-05
angle_max = 90.000015
direction = Vector3(0, -1, 0)
spread = 60.0
initial_velocity_min = 40.0
initial_velocity_max = 60.0
gravity = Vector3(0, 98, 0)
alpha_curve = SubResource("CurveTexture_5egjd")

[node name="Chicken" type="Area2D"]
script = ExtResource("1_scr0v")
wing_scene = ExtResource("2_5egjd")

[node name="WalkParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 3)
emitting = false
amount = 6
texture = ExtResource("3_kpgen")
trail_enabled = true
trail_sections = 4
process_material = SubResource("ParticleProcessMaterial_cgl0l")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hdls3")
animation = &"walk_right"
autoplay = "default"
frame_progress = 0.40818757

[node name="HealthBar" type="ProgressBar" parent="Sprite"]
offset_left = -3.0
offset_top = 6.0
offset_right = 66.99999
offset_bottom = 16.000004
scale = Vector2(0.1, 0.1)
theme_override_styles/background = SubResource("StyleBoxFlat_kpgen")
theme_override_styles/fill = SubResource("StyleBoxFlat_qxmy2")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 0)
shape = SubResource("CircleShape2D_ji1vg")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_kpgen")
volume_db = -5.0

[node name="HitParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 2
texture = ExtResource("3_ji1vg")
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_ce5f1")

[node name="DeathParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 4
texture = ExtResource("3_ji1vg")
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_kpgen")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_gfhuf")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("roaming_state")]
script = ExtResource("7_cgl0l")
roaming_state = NodePath("../RoamingState")

[node name="RoamingState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("8_kpgen")
idle_state = NodePath("../IdleState")
